--- a/style/scss/partials/_main.scss
+++ b/style/scss/partials/_main.scss
@@ -34,29 +34,28 @@ $red-primary: #F54700;
 $fuchsia-primary: #E03486;
 
 * { 
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Ubuntu', sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Ubuntu', sans-serif;
 }
 
 
 body {
-    background-color: $light-one;
-    flex-flow: column nowrap;
-    align-items: center;
-    height: 100vh;
-    width: 100%;
-    padding: 50px;
+  background-color: $light-one;
+  flex-flow: column nowrap;
+  align-items: center;
+  height: 100vh;
+  width: 100%;
+  padding: 50px;
+  display: flex;
+
+  section {
     display: flex;
-
-    section {
-        display: flex;
-        width: 100%;
-        height: 100%;
-        border-radius: 8px;
-        background-color: $white;
-    }
-
-
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    border-radius: 8px;
+    background-color: $white;
+  }
 }
